# Automated_Essay_Scoring

./: .gitignore  README.md  embed.py  embed_bert.py  main.py  pyproject.toml
conf/: main.yaml
conf/data/: base.yaml
conf/exp/: base.yaml  simple.yaml
conf/model/: adaboost.yaml  catboost.yaml  lightgbm.yaml  svm.yaml  xgboost.yaml
conf/model/params/: adaboost.yaml  catboost.yaml  lightgbm.yaml  svm.yaml  xgboost.yaml
dataset/: __init__.py  dataset.py  utils.py
experiment/: __init__.py  experiment.py  utils.py
model/: __init__.py  base_model.py  get_model.py  model.py  utils.py
