[tool.poetry]
name = "automated-essay-scoring"
version = "0.1.0"
description = ""
authors = ["LeonTanemura <leontanemura@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.2"
hydra-core = "^1.3.2"
tensorflow = "^2.16.1"
tensorflow-hub = "^0.16.1"
gensim = "^4.3.2"
scipy = "^1.13.1"
optuna = "^3.6.1"
scikit-learn = "^1.5.0"
lightgbm = "^4.3.0"
xgboost = "^2.0.3"
torch = "^2.3.0"
transformers = "^4.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
